packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/from_form_field.stderr
error: tuple structs are not supported
 --> $DIR/from_form_field.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^

error: [note] error occurred while deriving `FromFormField`
 --> $DIR/from_form_field.rs:3:10
  |
3 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
 --> $DIR/from_form_field.rs:7:1
  |
7 | struct Foo2(usize);
  | ^^^^^^

error: [note] error occurred while deriving `FromFormField`
 --> $DIR/from_form_field.rs:6:10
  |
6 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/from_form_field.rs:10:1
   |
10 | struct Foo3 {
   | ^^^^^^

error: [note] error occurred while deriving `FromFormField`
 --> $DIR/from_form_field.rs:9:10
  |
9 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variants cannot have fields
  --> $DIR/from_form_field.rs:16:6
   |
16 |     A(usize),
   |      ^^^^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:14:10
   |
14 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum must have at least one variant
  --> $DIR/from_form_field.rs:20:1
   |
20 | enum Foo5 { }
   | ^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:19:10
   |
19 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type generics are not supported
  --> $DIR/from_form_field.rs:23:11
   |
23 | enum Foo6<T> {
   |           ^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:22:10
   |
22 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/from_form_field.rs:29:21
   |
29 |     #[field(value = 123)]
   |                     ^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:27:10
   |
27 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal, found bare path "value"
  --> $DIR/from_form_field.rs:35:13
   |
35 |     #[field(value)]
   |             ^^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:33:10
   |
33 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variant has conflicting values
  --> $DIR/from_form_field.rs:41:5
   |
41 |     #[field(value = "bar")]
   |     ^

error: [note] this value...
  --> $DIR/from_form_field.rs:41:21
   |
41 |     #[field(value = "bar")]
   |                     ^^^^^

error: [note] ...conflicts with this value
  --> $DIR/from_form_field.rs:42:21
   |
42 |     #[field(value = "bar")]
   |                     ^^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:39:10
   |
39 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field value conflicts with previous value
  --> $DIR/from_form_field.rs:50:21
   |
50 |     #[field(value = "BAr")]
   |                     ^^^^^

error: [help] ...declared in this variant
  --> $DIR/from_form_field.rs:50:5
   |
50 |     #[field(value = "BAr")]
   |     ^

error: [note] previous field with conflicting name
  --> $DIR/from_form_field.rs:48:5
   |
48 |     #[field(value = "bar")]
   |     ^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:46:10
   |
46 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field value conflicts with previous value
  --> $DIR/from_form_field.rs:57:21
   |
57 |     #[field(value = "a")]
   |                     ^^^

error: [help] ...declared in this variant
  --> $DIR/from_form_field.rs:57:5
   |
57 |     #[field(value = "a")]
   |     ^

error: [note] previous field with conflicting name
  --> $DIR/from_form_field.rs:56:5
   |
56 |     A,
   |     ^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:54:10
   |
54 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variant has conflicting values
  --> $DIR/from_form_field.rs:80:5
   |
80 |     #[field(value = "FoO")]
   |     ^

error: [note] this value...
  --> $DIR/from_form_field.rs:80:21
   |
80 |     #[field(value = "FoO")]
   |                     ^^^^^

error: [note] ...conflicts with this value
  --> $DIR/from_form_field.rs:81:21
   |
81 |     #[field(value = "foo")]
   |                     ^^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:78:10
   |
78 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field has conflicting names
  --> $DIR/from_form_field.rs:87:5
   |
87 |     #[field(name = "foo")]
   |     ^

error: [note] this field name...
  --> $DIR/from_form_field.rs:87:20
   |
87 |     #[field(name = "foo")]
   |                    ^^^^^

error: [note] ...conflicts with this field name
  --> $DIR/from_form_field.rs:88:28
   |
88 |     #[field(name = uncased("FOO"))]
   |                            ^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form_field.rs:85:10
   |
85 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
  --> $DIR/from_form_field.rs:96:20
   |
96 |     #[field(name = "foo")]
   |                    ^^^^^

error: [help] declared in this field
  --> $DIR/from_form_field.rs:96:5
   |
96 |     #[field(name = "foo")]
   |     ^

error: [note] previous field with conflicting name
  --> $DIR/from_form_field.rs:94:5
   |
94 |     #[field(name = "foo")]
   |     ^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form_field.rs:92:10
   |
92 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
   --> $DIR/from_form_field.rs:104:5
    |
104 |     hello_there: usize,
    |     ^^^^^^^^^^^

error: [help] declared in this field
   --> $DIR/from_form_field.rs:104:5
    |
104 |     hello_there: usize,
    |     ^^^^^^^^^^^

error: [note] previous field with conflicting name
   --> $DIR/from_form_field.rs:102:5
    |
102 |     #[field(name = uncased("HELLO_THERE"))]
    |     ^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form_field.rs:100:10
    |
100 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
   --> $DIR/from_form_field.rs:111:5
    |
111 |     hello_there: usize,
    |     ^^^^^^^^^^^

error: [help] declared in this field
   --> $DIR/from_form_field.rs:111:5
    |
111 |     hello_there: usize,
    |     ^^^^^^^^^^^

error: [note] previous field with conflicting name
   --> $DIR/from_form_field.rs:109:5
    |
109 |     #[field(name = "hello_there")]
    |     ^

error: [note] error occurred while deriving `FromForm`
   --> $DIR/from_form_field.rs:107:10
    |
107 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)
